<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufcg.lsi.deuzicachico.CadastroVisita" 
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_nome_agente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_agente" 
        />

	<EditText
        android:id="@+id/et_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/data_visita" />
	
	<EditText
  	    android:id="@+id/et_obs_visita"
  	    android:hint="@string/obeservacoes"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="top"
	    android:singleLine="false"
	    android:lines="5"
	    android:layout_marginLeft="5dip"
	    android:layout_marginRight="5dip" />
  	
  	<Button
  	    android:id="@+id/botao_salvar_visita" 
  	    android:layout_width="fill_parent"
  	    android:layout_height="wrap_content"
  	    android:background="#008080"
  	    android:textColor="#C9EBEB"
  	    android:text="@string/salvar_visita"/>
    
</LinearLayout>
