<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.edu.ufcg.lsi.deuzicachico.CadastroFoco"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/foto_denuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/imagem_do_foco"
            android:layout_marginBottom="30dp"
           />



        <EditText
            android:id="@+id/et_obs"
            android:hint="@string/obeservacoes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:singleLine="false"
            android:lines="5"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <Button
            android:id="@+id/botao_salvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#CE2900"
            android:textColor="#C9EBEB"
            android:text="@string/enviar_denuncia"/>


    </LinearLayout>
</ScrollView>